# zed-pike

./: .commitlintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  extension.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.husky/: commit-msg  pre-push
crates/pike-lsp/: Cargo.toml  build.rs
crates/pike-lsp/benches/: analysis.rs
crates/pike-lsp/src/: analysis.rs  cli.rs  daemon.rs  forward.rs  lib.rs  main.rs  resource_guard.rs  service.rs
crates/pike-lsp/src/transport/: mod.rs  ssh.rs  stdio.rs  unix.rs
crates/zed-pike-bridge/: Cargo.toml
crates/zed-pike-bridge/src/: lib.rs
docs/: ARCHITECTURE.md  PLAN.md  perf.md
fixtures/syntax/: basic.pike  preprocessor.pike  roxen_component.pike
languages/pike/: config.toml  highlights.scm  indents.scm  outline.scm
openspec/changes/add-windows-release-binary/: proposal.md
openspec/changes/add-windows-release-binary/specs/release-pipeline/: spec.md
openspec/changes/archive/2026-06-22-add-windows-release-binary/: design.md  tasks.md
openspec/changes/archive/2026-06-22-lsp-resource-guard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-lsp-resource-guard/specs/pike-lsp-daemon/: spec.md
openspec/changes/archive/2026-06-22-lsp-resource-guard/specs/pike-lsp-resource-guard/: spec.md
openspec/changes/archive/2026-06-22-lsp-resource-guard/specs/zed-remote-lifecycle/: spec.md
openspec/changes/archive/2026-06-22-pike-lsp-foundation/: design.md  tasks.md
openspec/changes/archive/2026-06-22-pike-lsp-foundation/specs/pike-lsp-daemon/: spec.md
openspec/changes/archive/2026-06-22-zed-pike-syntax-mvp/specs/zed-pike-syntax/: spec.md
openspec/changes/archive/2026-06-22-zed-remote-lsp-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-zed-remote-lsp-lifecycle/specs/pike-lsp-daemon/: spec.md
openspec/changes/archive/2026-06-22-zed-remote-lsp-lifecycle/specs/pike-lsp-transport/: spec.md
openspec/changes/archive/2026-06-22-zed-remote-lsp-lifecycle/specs/zed-pike-bridge/: spec.md
openspec/changes/archive/2026-06-22-zed-remote-lsp-lifecycle/specs/zed-remote-lifecycle/: spec.md
openspec/changes/pike-lsp-foundation/: proposal.md
openspec/changes/pike-lsp-foundation/specs/pike-lsp-analysis/: spec.md
openspec/changes/pike-lsp-foundation/specs/pike-lsp-transport/: spec.md
openspec/changes/pike-lsp-foundation/specs/zed-pike-bridge/: spec.md
openspec/changes/windows-remote-linux-lsp/: design.md  proposal.md  tasks.md
openspec/changes/windows-remote-linux-lsp/specs/release-pipeline/: spec.md
openspec/changes/windows-remote-linux-lsp/specs/zed-pike-bridge/: spec.md
openspec/changes/windows-remote-linux-lsp/specs/zed-remote-lifecycle/: spec.md
openspec/changes/windows-remote-linux-lsp/specs/zed-remote-platform-resolution/: spec.md
openspec/changes/zed-pike-syntax-mvp/: design.md  proposal.md  tasks.md
openspec/specs/pike-lsp-analysis/: spec.md
openspec/specs/pike-lsp-daemon/: spec.md
openspec/specs/pike-lsp-resource-guard/: spec.md
openspec/specs/pike-lsp-transport/: spec.md
openspec/specs/release-pipeline/: spec.md
openspec/specs/zed-pike-bridge/: spec.md
openspec/specs/zed-pike-syntax/: spec.md
openspec/specs/zed-remote-lifecycle/: spec.md
scripts/: check-branch-name.sh  install.ps1  install.sh  lsp_smoke.py  perf-smoke.sh  verify.sh  zed-extension-check.sh
