[package]
name = "zed-pike-bridge"
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["TheSmuks"]
rust-version = "1.80"
description = "Zed WASM bridge that registers the Pike LSP server in Zed"

[lib]
name = "zed_pike_bridge"
crate-type = ["cdylib"]
path = "crates/zed-pike-bridge/src/lib.rs"

[workspace]
resolver = "2"
members = [
    ".",
    "crates/pike-lsp",
]
default-members = ["."]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["TheSmuks"]
rust-version = "1.80"

[workspace.dependencies]
# Async runtime + utilities. The `process` and `net` features
# are host-only; the bridge target is wasm32-wasip2 and must not
# pull them in. We split the dep into two feature gates.
tokio = { version = "1.40", default-features = false, features = ["rt-multi-thread", "macros", "io-util", "io-std", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
# LSP plumbing
tower = { version = "0.5", features = ["util"] }
tower-lsp = { version = "0.20" }
lsp-types = { version = "0.95" }
# Tree-sitter Pike grammar (pinned, same commit as extension)
tree-sitter = "0.25"
tree-sitter-pike = { git = "https://github.com/TheSmuks/tree-sitter-pike", rev = "adacb8165dc9c7db9ca2f8d15fcb73b3c7ea8980" }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Misc
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1"
parking_lot = "0.12"
# CLI
clap = { version = "4.5", features = ["derive"] }

[dependencies]
zed_extension_api = "0.6"
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
