[package]
name = "pike-lsp"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pike language server: performant, low-resource, SSH-aware LSP for Pike 8.0.1116"

[[bin]]
name = "pike-lsp"
path = "src/main.rs"

[lib]
name = "pike_lsp"
path = "src/lib.rs"

[dependencies]
# Cross-platform deps. The Unix-only `tokio` features (`net`) live
# in the per-target tables below; the rest of the dependency set is
# the same on every target.
tokio-util.workspace = true
tower.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
tree-sitter.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
clap.workspace = true

# Host-only features. `net` only ships on Unix targets; on Windows
# the binary only supports the `stdio` transport and the language
# server compiles without pulling in Unix-socket APIs.
[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net", "process"] }

[target.'cfg(not(unix))'.dependencies]
tokio = { workspace = true, features = ["process"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "time", "fs", "test-util"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "analysis"
harness = false