[package]
name = "pike-lsp"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pike language server: performant, low-resource, SSH-aware LSP for Pike 8.0.1116"

[[bin]]
name = "pike-lsp"
path = "src/main.rs"

[lib]
name = "pike_lsp"
path = "src/lib.rs"

[dependencies]
# Cross-platform deps. Tree-sitter is only needed on Unix
# targets where the unix-socket transport and the analysis
# layer are compiled in. On Windows the binary only ships the
# `stdio` transport, which does not parse Pike, so we don't
# pull tree-sitter (and its C runtime dependency chain that
# would otherwise be tricky to link under MSVC).
tower.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
clap.workspace = true

# Host-only features. `net` only ships on Unix targets; on Windows
# the binary only supports the `stdio` transport and the language
# server compiles without pulling in Unix-socket APIs.
[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net", "process"] }
tokio-util.workspace = true
tree-sitter.workspace = true

[target.'cfg(not(unix))'.dependencies]
tokio = { workspace = true, features = ["process"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "time", "fs", "test-util"] }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "analysis"
harness = false