[package]
name = "zed-pike-bridge"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Zed WASM bridge that registers the Pike LSP server in Zed"

[lib]
name = "zed_pike_bridge"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.6"
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
